--- a/style.css
+++ b/style.css
@@ -253,19 +253,21 @@ section{
     width: 100%;
 }
 
-.home-imgHover {
+
+.side-image {
     position:absolute;
     top: 0;
     right: 0;
     width: 45%;
     height: 100%;
-    background:  url("/imagenes/perfil3.jpg") no-repeat;
-    background-size: cover;
-    background-position: center;
-    transition: 3s;
 }
 
-
+.side-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
+}
 
 .about{
     display: flex;
